--- a/Project/templates/home.html
+++ b/Project/templates/home.html
@@ -60,12 +60,13 @@ body, html {
 <div class="w3-container" id="about">
   <div class="w3-content" style="max-width:700px">
     <h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">ABOUT PICTURESQUE.AI</span></h5>
-    <p>Add text here!</p>
-    <p>More text.</p>
-
+    <p>Picturesque.ai is made by a group of photo lovers and AI enthusiasts. As a photo recommendation application, 
+   picturesque.ai will help you choose photos that are more aesthetically pleasing to viewers using
+   state-of-the-art deep learning technique.  </p>
+    
     <div class="w3-panel w3-leftbar w3-light-grey">
-      <p><i>"Add quote here" think slogan.</i></p>
-      <p>Author of the quote</p>
+      <p><i>"All photography is propaganda" - Martin Parr</i></p>
+      <p></p>
     </div>
     <img src="{{ url_for('static', filename = 'test.jpg') }}" style="width:100%;max-width:1000px" class="w3-margin-top">
 
@@ -228,9 +229,11 @@ Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 
 
 <!-- Footer -->
+<!-- 
 <footer class="w3-center w3-light-grey w3-padding-48 w3-large">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 </footer>
+ -->
 
 
 </body>
