--- a/templates/dashboard_upload.html
+++ b/templates/dashboard_upload.html
@@ -19,7 +19,7 @@ Dashboard
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">PICTURESQUE.AI</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -58,20 +58,33 @@ Dashboard
             <!--<li><a href="">Another nav item</a></li>-->
           <!--</ul>-->
         <!--</div>-->
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Welcome, {{ name }}</h1>
 
-              <div class="container">
-      <div class="header">
-        <h3 class="text-muted">Please upload your photos</h3>
+    <!--<div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">-->
+    <!--<h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">Welcome, {{ name }}</span></h5>-->
+
+
+ <div class="container">
+       <p></p>
+   <p></p>
+   <p></p>
+        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
+          <h1 class="page-header">Welcome, {{ name }}!</h1>
+<!--<hr>-->
+      <div class="container">
+        <h2 class="text-muted">Please upload your photos</h2>
       </div>
-      <hr/>
+      <!--<hr/>-->
       <div>
 
       <form action="upload" method="post" enctype="multipart/form-data">
         <input type="file" multiple="" name="file[]" class="span3" /><br />
-        <input type="submit" value="Upload"  class="span2">
+        <!--<input type="submit" value="Upload"  class="span2">-->
+        <input type="submit" value="Upload"  class="w3-button w3-block w3-black">
       </form>
+
+          {% if error==1 %}
+          <p>Oops! Please upload up to 5 photos.</p>
+          {% endif %}
       </div>
     </div>
 
