--- a/templates/login.html
+++ b/templates/login.html
@@ -79,11 +79,15 @@ Login
         {{ wtf.form_field(form.username) }}
         {{ wtf.form_field(form.password) }}
         {{ wtf.form_field(form.remember) }}
+        {% if error ==1 %}
+        <p> Error - Invalid username or password  </p>
+        {% endif %}
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 
         <div class="w3-col s3">
-      <a href="/signup" class="w3-button w3-block w3-black">Register</a>
+<!--       <a href="/signup" class="w3-button w3-block w3-black">Register</a> -->
+      <a href="/signup" >Register</a>
       </div>
 
     </div> <!-- /container -->
