--- a/templates/dashboard_results.html
+++ b/templates/dashboard_results.html
@@ -1,92 +1,55 @@
-{% extends "bootstrap/base.html" %}
+<!DOCTYPE html>
+<html>
+<title>PICTURESQUE.AI</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<style>
+body, html {font-family: "Inconsolata", sans-serif;}
+h1,h2,h3,h4,h5,h6 {
+    letter-spacing: 2px;
+}
+    
+</style>
+<body>
 
-{% block title %}
-Dashboard
-{% endblock %}
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-black w3-padding w3-card" style="letter-spacing:4px;">
+    <a href="/" class="w3-bar-item w3-button">Home</a>
+    <!-- Right-sided navbar links. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <!-- <a href="/home" class="w3-bar-item w3-button">Home</a>-->
+      <a href="/logout" class="w3-bar-item w3-button">Logout</a>
+    </div>
+  </div>
+</div>
+    <div class="w3-content w3-padding" style = "margin-top: 80px">
+          <h1 class="page-header" style = "margin-left: 30px">Welcome, {{ name }}</h1>
+    </div>
 
-{% block styles %}
-{{super()}}
-<link rel="stylesheet" href="{{url_for('.static', filename='dashboard.css')}}">
-{% endblock %}
-
-{% block content %}
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container-fluid">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">PICTURESQUE.AI</a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/">Home</a></li>
-            <li><a href="#">Settings</a></li>
-            <li><a href="#">Profile</a></li>
-            <li><a href="{{ url_for('logout') }}">Log Out</a></li>
-          </ul>
-          <form class="navbar-form navbar-right">
-            <input type="text" class="form-control" placeholder="Search...">
-          </form>
-        </div>
+<div class="container" style = "margin: 30px 30px 50px 50px">
+      <div class="header">
+        <h3 class="text-muted" style="display: inline-block">Evaluation Results</h3>
+        <a href="/index" class="w3-button w3-round-large w3-border w3-border-black w3-hover-white" style="float: right">Make Another Prediction</a>
+        
       </div>
-    </nav>
-
-
-    <!--<div class="container-fluid">-->
-      <!--<div class="row">-->
-        <!--<div class="col-sm-3 col-md-2 sidebar">-->
-          <!--<ul class="nav nav-sidebar">-->
-            <!--<li class="active"><a href="#">Overview <span class="sr-only">(current)</span></a></li>-->
-            <!--<li><a href="#">Reports</a></li>-->
-            <!--<li><a href="#">Analytics</a></li>-->
-            <!--<li><a href="#">Export</a></li>-->
-          <!--</ul>-->
-          <!--<ul class="nav nav-sidebar">-->
-            <!--<li><a href="">Nav item</a></li>-->
-            <!--<li><a href="">Nav item again</a></li>-->
-            <!--<li><a href="">One more nav</a></li>-->
-            <!--<li><a href="">Another nav item</a></li>-->
-            <!--<li><a href="">More navigation</a></li>-->
-          <!--</ul>-->
-          <!--<ul class="nav nav-sidebar">-->
-            <!--<li><a href="">Nav item again</a></li>-->
-            <!--<li><a href="">One more nav</a></li>-->
-            <!--<li><a href="">Another nav item</a></li>-->
-          <!--</ul>-->
-        <!--</div>-->
-        <div class="container">
-                     <p></p>
-            <p></p>
-            <p></p>
-        <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2 main">
-          <h1 class="page-header">Congratulations, {{ name }}!</h1>
-
-
-            <div class="container">
-      <!--<div class="header">-->
-        <h3 class="text-muted">Our AI ranked photos for you!</h3>
-            </div>
       <hr>
       <div>
-    
+      This is a list of the files you just uploaded, and the popularity ranking predicted.
       <ul>
-              <div class="row placeholders">
+        <div class="row placeholders">
         {% for file in files %}
-          <div class="col-xs-6 col-sm-3 placeholder">
-              <li><a href="{{url_for('uploaded_file', filename=file)}}">{{file}}</a></li>
-              <img src="{{url_for('uploaded_file', filename=file)}}" style="width:128px;height:128px;" width="128" height="128" class="img-responsive"           alt="Generic placeholder thumbnail">
-              <h4>Hot </h4>
-              <!--<span class="text-muted">Something else</span>-->
-          </div>
 
-          <!--<img src="{{url_for('uploaded_file', filename=file)}}" style="width:128px;height:128px;">-->
+              <h4>No.{{loop.index}}</h4>
+              <div class="col-xs-6 col-sm-3 placeholder">
+              <img src="{{url_for('uploaded_file', filename=file)}}" height="128" class="img-responsive" alt="Generic placeholder thumbnail">
+              <span><a href="{{url_for('uploaded_file', filename=file)}}">{{file}}</a></span>
+              </div>
+            
         {% endfor %}
-               </div>
-      <p>*This is a list of the files you just uploaded, we rank them based on predicted popularity</p>
+        </div>
       </ul>
       </div>
       </hr>
@@ -94,158 +57,3 @@ Dashboard
 
 
 
-          <!--<div class="row placeholders">-->
-            <!--<div class="col-xs-6 col-sm-3 placeholder">-->
-              <!--<img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">-->
-              <!--<h4>Label</h4>-->
-              <!--<span class="text-muted">Something else</span>-->
-            <!--</div>-->
-            <!--<div class="col-xs-6 col-sm-3 placeholder">-->
-              <!--<img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">-->
-              <!--<h4>Label</h4>-->
-              <!--<span class="text-muted">Something else</span>-->
-            <!--</div>-->
-            <!--<div class="col-xs-6 col-sm-3 placeholder">-->
-              <!--<img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">-->
-              <!--<h4>Label</h4>-->
-              <!--<span class="text-muted">Something else</span>-->
-            <!--</div>-->
-            <!--<div class="col-xs-6 col-sm-3 placeholder">-->
-              <!--<img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" width="200" height="200" class="img-responsive" alt="Generic placeholder thumbnail">-->
-              <!--<h4>Label</h4>-->
-              <!--<span class="text-muted">Something else</span>-->
-            <!--</div>-->
-          <!--</div>-->
-
-          <!--<h2 class="sub-header">Section title</h2>-->
-          <!--<div class="table-responsive">-->
-            <!--<table class="table table-striped">-->
-              <!--<thead>-->
-                <!--<tr>-->
-                  <!--<th>#</th>-->
-                  <!--<th>Header</th>-->
-                  <!--<th>Header</th>-->
-                  <!--<th>Header</th>-->
-                  <!--<th>Header</th>-->
-                <!--</tr>-->
-              <!--</thead>-->
-              <!--<tbody>-->
-                <!--<tr>-->
-                  <!--<td>1,001</td>-->
-                  <!--<td>Lorem</td>-->
-                  <!--<td>ipsum</td>-->
-                  <!--<td>dolor</td>-->
-                  <!--<td>sit</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,002</td>-->
-                  <!--<td>amet</td>-->
-                  <!--<td>consectetur</td>-->
-                  <!--<td>adipiscing</td>-->
-                  <!--<td>elit</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,003</td>-->
-                  <!--<td>Integer</td>-->
-                  <!--<td>nec</td>-->
-                  <!--<td>odio</td>-->
-                  <!--<td>Praesent</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,003</td>-->
-                  <!--<td>libero</td>-->
-                  <!--<td>Sed</td>-->
-                  <!--<td>cursus</td>-->
-                  <!--<td>ante</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,004</td>-->
-                  <!--<td>dapibus</td>-->
-                  <!--<td>diam</td>-->
-                  <!--<td>Sed</td>-->
-                  <!--<td>nisi</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,005</td>-->
-                  <!--<td>Nulla</td>-->
-                  <!--<td>quis</td>-->
-                  <!--<td>sem</td>-->
-                  <!--<td>at</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,006</td>-->
-                  <!--<td>nibh</td>-->
-                  <!--<td>elementum</td>-->
-                  <!--<td>imperdiet</td>-->
-                  <!--<td>Duis</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,007</td>-->
-                  <!--<td>sagittis</td>-->
-                  <!--<td>ipsum</td>-->
-                  <!--<td>Praesent</td>-->
-                  <!--<td>mauris</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,008</td>-->
-                  <!--<td>Fusce</td>-->
-                  <!--<td>nec</td>-->
-                  <!--<td>tellus</td>-->
-                  <!--<td>sed</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,009</td>-->
-                  <!--<td>augue</td>-->
-                  <!--<td>semper</td>-->
-                  <!--<td>porta</td>-->
-                  <!--<td>Mauris</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,010</td>-->
-                  <!--<td>massa</td>-->
-                  <!--<td>Vestibulum</td>-->
-                  <!--<td>lacinia</td>-->
-                  <!--<td>arcu</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,011</td>-->
-                  <!--<td>eget</td>-->
-                  <!--<td>nulla</td>-->
-                  <!--<td>Class</td>-->
-                  <!--<td>aptent</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,012</td>-->
-                  <!--<td>taciti</td>-->
-                  <!--<td>sociosqu</td>-->
-                  <!--<td>ad</td>-->
-                  <!--<td>litora</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,013</td>-->
-                  <!--<td>torquent</td>-->
-                  <!--<td>per</td>-->
-                  <!--<td>conubia</td>-->
-                  <!--<td>nostra</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,014</td>-->
-                  <!--<td>per</td>-->
-                  <!--<td>inceptos</td>-->
-                  <!--<td>himenaeos</td>-->
-                  <!--<td>Curabitur</td>-->
-                <!--</tr>-->
-                <!--<tr>-->
-                  <!--<td>1,015</td>-->
-                  <!--<td>sodales</td>-->
-                  <!--<td>ligula</td>-->
-                  <!--<td>in</td>-->
-                  <!--<td>libero</td>-->
-                <!--</tr>-->
-              <!--</tbody>-->
-            <!--</table>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-<!--{% endblock %}-->
