--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -60,6 +60,11 @@
 					</span>
                     </li>
                     <li class="p-b-32">
+                    <span class="txt1 p-b-15" style = "font-size:18px ">
+						Free Evaluation Remaining: {{free}} 
+					</span>
+                    </li>
+                    <li class="p-b-32">
                     <button class="w3-btn w3-round-large w3-border w3-border-grey" style = "font-size:15px">
 						Upgrade 
 					</button>
