add profile and upgrade page

--- a/templates/dashboard_upload.html
+++ b/templates/dashboard_upload.html
@@ -19,10 +19,19 @@ h1,h2,h3,h4,h5,h6 {
   <div class="w3-bar w3-black w3-padding w3-card" style="letter-spacing:4px;">
     <a href="/" class="w3-bar-item w3-button">Home</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
+      <div class="w3-right w3-hide-small">
+      <!-- <a href="/home" class="w3-bar-item w3-button">Home</a>-->
+      <a href="/profile" class="w3-bar-item w3-button">Profile</a>
+      </div>
+      <div class="w3-right w3-hide-small">
+      <!-- <a href="/home" class="w3-bar-item w3-button">Home</a>-->
+      <a href="/upgrade" class="w3-bar-item w3-button">Upgrade</a>
+      </div>
     <div class="w3-right w3-hide-small">
       <!-- <a href="/home" class="w3-bar-item w3-button">Home</a>-->
       <a href="/logout" class="w3-bar-item w3-button">Logout</a>
     </div>
+
   </div>
 </div>
     <div class="w3-content w3-padding" style = "margin-top: 80px">
