--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -65,9 +65,10 @@
 					</span>
                     </li>
                     <li class="p-b-32">
-                    <button class="w3-btn w3-round-large w3-border w3-border-grey" style = "font-size:15px">
-						Upgrade 
-					</button>
+                    <!--<button class="w3-btn w3-round-large w3-border w3-border-grey" style = "font-size:15px">-->
+						<!--Upgrade -->
+					<!--</button>-->
+					 <a href="/upgrade" class="w3-button w3-block w3-black">Upgrade</a>
                     </li>
 		            {% endif %}
                         
@@ -79,7 +80,7 @@
 					</li>
                     <li class="p-b-32">
                     <span class="txt1 p-b-15" style = "font-size:18px">
-						Plan Expiration Date: {{plan date}}
+						Plan Expiration Date: {{plan_date}}
 					</span>
 					</li>
                     {% endif %}
