--- a/templates/upgrade.html
+++ b/templates/upgrade.html
@@ -21,6 +21,11 @@
         <div class="w3-bar w3-black w3-padding w3-card" style="letter-spacing:4px;">
             <a href="/" class="w3-bar-item w3-button">Home</a>
     <!-- Right-sided navbar links. Hide them on small screens -->
+			<div class="w3-right w3-hide-small">
+      <!-- <a href="/home" class="w3-bar-item w3-button">Home</a>-->
+      <a href="/index" class="w3-bar-item w3-button">Upload</a>
+      </div>
+
             <div class="w3-right w3-hide-small">
       <!-- <a href="/home" class="w3-bar-item w3-button">Home</a>-->
             <a href="/logout" class="w3-bar-item w3-button">Logout</a>
@@ -32,13 +37,19 @@
 		<div class="container-login100">
             
 			<div class="wrap-login100 p-l-85 p-r-85 p-t-55 p-b-55">
-				<form class="login100-form flex-sb flex-w" >
+				<form class="login100-form flex-sb flex-w"  method="POST" action="/upgrade">
                     
-                        
+                    {% if error==1 %}
+					<span class="txt1 p-b-11">
+						<p>{{session.messages}}</p>
+					</span>
+                    {% endif %}
+
                     <span class="login100-form-title p-b-32">
 						UPGRADE TO PREMIUM
 					</span>
-					
+
+
                      {{ form.hidden_tag() }}
 					<span class="txt1 p-b-11">
 						Name
@@ -78,14 +89,15 @@
                         {{ form.sec_code(class = "input100") }}
                         
 						<span class="focus-input100"></span>
-					</div>						
-					 <li class="p-b-32">
-                    <!--<button class="w3-btn w3-round-large w3-border w3-border-grey" style = "font-size:15px">-->
-						<!--Upgrade -->
-					<!--</button>-->
-					 <a href="/profile" class="w3-button w3-block w3-black">SUBMIT</a>
-                    </li>
-					
+					</div>
+
+					<div class="container-login100-form-btn">
+						<button class="login100-form-btn" type="submit" style="display: block; margin: 0 auto;">
+							SUBMIT
+						</button>
+
+					</div>
+
 														
 				</form>
 			</div>
