--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,7 +11,7 @@
     gtag('config', 'UA-118590596-1');
   </script>
 </head>
-<title>W3.CSS Template</title>
+<title>Picturesque.ai - contact</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
