--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
   </script>
 </head>
 
-<title>W3.CSS Template</title>
+<title>Picturesque.ai - home</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -168,11 +168,11 @@ body, html {
 
 
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">DEMO/STEPS</span></h5>
-    <p>Here how it works</p>
+    <p>Here is how it works</p>
     <!--<div id="googleMap" class="w3-sepia" style="width:100%;height:400px;"></div>-->
 
 <video controls="controls" width="800" height="600"
-       name="login_0416" src="{{ url_for('static', filename = 'login_0416.mov')}}"></video>
+       name="login_0416" src="{{ url_for('static', filename = 'login_0416.mov')}}" onplay="gtag('event', 'play', {'event_category': 'video', 'event_label': 'tutorial', 'value': 1})"></video>
 
     <p><span class="w3-tag">Step 1</span> Upload up to 5 photos.</p>
     <p><span class="w3-tag">Step 2</span> Submit.</p>
