--- a/templates/upgrade_landing.html
+++ b/templates/upgrade_landing.html
@@ -3,5 +3,5 @@
 <!--<meta http-equiv="refresh" content="10">-->
 <!-- 以下方式定时转到其他页面 -->
   Thank you for upgrading! You will be automatically redirected to your profile page in a moment.
-<meta http-equiv="refresh" content="3; url=login">
+<meta http-equiv="refresh" content="3; url=profile">
 </head>
