--- a/templates/home.html
+++ b/templates/home.html
@@ -199,7 +199,7 @@ body, html {
 
       <p><a href="/index" class="w3-button w3-block w3-black">START UPLOAD</a></p>
 
-      <p><a href="/upgrade" class="w3-button w3-block w3-black">UPGRADE NOW</a></p>
+      <p><a href="/upgrade" class="w3-button w3-block w3-black" onclick="gtag('event', 'upgrade', {'event_category' : 'click', 'event_label' : 'payment', 'value' : 1 });">UPGRADE NOW</a></p>
 
           
           {% else %}
