--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -84,7 +84,7 @@
                     <!--<button class="w3-btn w3-round-large w3-border w3-border-grey" style = "font-size:15px">-->
 						<!--Upgrade -->
 					<!--</button>-->
-					 <a href="/upgrade" class="w3-button w3-block w3-black">Upgrade</a>
+					 <a href="/upgrade" class="w3-button w3-block w3-black" onclick="gtag('event', 'upgrade', {'event_category' : 'click', 'event_label' : 'payment', 'value' : 1 });">Upgrade</a>
                     </li>
 		            {% endif %}
                         
