--- a/templates/dashboard_upload.html
+++ b/templates/dashboard_upload.html
@@ -36,7 +36,7 @@ h1,h2,h3,h4,h5,h6 {
       </div>
       <div class="w3-right w3-hide-small">
       <!-- <a href="/home" class="w3-bar-item w3-button">Home</a>-->
-      <a href="/upgrade" class="w3-bar-item w3-button">Upgrade</a>
+      <a href="/upgrade" class="w3-bar-item w3-button" onclick="gtag('event', 'upgrade', {'event_category' : 'click', 'event_label' : 'payment', 'value' : 1 });">Upgrade</a>
       </div>
     <div class="w3-right w3-hide-small">
       <!-- <a href="/home" class="w3-bar-item w3-button">Home</a>-->
