fix sign up email

--- a/templates/home.html
+++ b/templates/home.html
@@ -178,6 +178,8 @@ body, html {
     <p><span class="w3-tag">Step 2</span> Submit.</p>
     <p><span class="w3-tag">Step 3</span> Results.</p>
 
+      <p><strong>FREE PLAN: Enjoy 5 free evaluations a month. </strong></p>
+      <p><strong>PREMIUM PLAN: Enjoy unlimited evaluations for $9.99 a month. </strong></p>
 
     <p><strong>Try it now</strong></p>
 
