--- a/templates/contact.html
+++ b/templates/contact.html
@@ -42,9 +42,9 @@ body, html {
     <!--<div class="w3-col s3">-->
       <!--<a href="#about" class="w3-button w3-block w3-black">ABOUT</a>-->
     <!--</div>-->
-    <div class="w3-col s3">
-      <a href="#demo" class="w3-button w3-block w3-black">DEMO</a>
-    </div>
+    <!--<div class="w3-col s3">-->
+      <!--<a href="/index" class="w3-button w3-block w3-black">UPLOAD</a>-->
+    <!--</div>-->
     <div class="w3-col s3">
       <a href="#contact" class="w3-button w3-block w3-black">CONTACT US</a>
     </div>
