--- a/templates/signup.html
+++ b/templates/signup.html
@@ -54,7 +54,7 @@
                     <span class="txt1 p-b-11">
 						Email
 					</span>
-					<div class="wrap-input100 m-b-36" >
+					<div class="wrap-input100 m-b-12" >
 						
                         {{ form.email(class = "input100") }}
                         
@@ -65,7 +65,11 @@
                         {% endif %}
 					
                     </div>
-                    
+                      <div class="flex-sb-m w-full p-b-18">
+                        <span class="txt1 p-b-11" style = "color:red">
+						      {{ message2 }}
+				        </span>
+					</div>
                     
 					<span class="txt1 p-b-11">
 						Password
