--- a/templates/upgrade_landing.html
+++ b/templates/upgrade_landing.html
@@ -1,4 +1,14 @@
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-118590596-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-118590596-1');
+    </script>
+
 <!-- 以下方式只是刷新不跳转到其他页面 -->
 <!--<meta http-equiv="refresh" content="10">-->
 <!-- 以下方式定时转到其他页面 -->
