--- a/templates/home.html
+++ b/templates/home.html
@@ -102,65 +102,10 @@ body, html {
     </div>
     <img src="{{ url_for('static', filename = 'test.jpg') }}" style="width:100%;max-width:1000px" class="w3-margin-top">
 
-    <!--<p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>-->
-    <!--<p><strong>Address:</strong> 15 Adr street, 5015, NY</p>-->
   </div>
 </div>
 
-<!--&lt;!&ndash; Menu Container &ndash;&gt;-->
-<!--<div class="w3-container" id="menu">-->
-  <!--<div class="w3-content" style="max-width:700px">-->
 
-    <!--<h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">THE MENU</span></h5>-->
-
-    <!--<div class="w3-row w3-center w3-card w3-padding">-->
-      <!--<a href="javascript:void(0)" onclick="openMenu(event, 'Eat');" id="myLink">-->
-        <!--<div class="w3-col s6 tablink">Eat</div>-->
-      <!--</a>-->
-      <!--<a href="javascript:void(0)" onclick="openMenu(event, 'Drinks');">-->
-        <!--<div class="w3-col s6 tablink">Drink</div>-->
-      <!--</a>-->
-    <!--</div>-->
-
-    <!--<div id="Eat" class="w3-container menu w3-padding-48 w3-card">-->
-      <!--<h5>Bread Basket</h5>-->
-      <!--<p class="w3-text-grey">Assortment of fresh baked fruit breads and muffins 5.50</p><br>-->
-
-      <!--<h5>Honey Almond Granola with Fruits</h5>-->
-      <!--<p class="w3-text-grey">Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</p><br>-->
-
-      <!--<h5>Belgian Waffle</h5>-->
-      <!--<p class="w3-text-grey">Vanilla flavored batter with malted flour 7.50</p><br>-->
-
-      <!--<h5>Scrambled eggs</h5>-->
-      <!--<p class="w3-text-grey">Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</p><br>-->
-
-      <!--<h5>Blueberry Pancakes</h5>-->
-      <!--<p class="w3-text-grey">With syrup, butter and lots of berries 8.50</p>-->
-    <!--</div>-->
-
-    <!--<div id="Drinks" class="w3-container menu w3-padding-48 w3-card">-->
-      <!--<h5>Coffee</h5>-->
-      <!--<p class="w3-text-grey">Regular coffee 2.50</p><br>-->
-
-      <!--<h5>Chocolato</h5>-->
-      <!--<p class="w3-text-grey">Chocolate espresso with milk 4.50</p><br>-->
-
-      <!--<h5>Corretto</h5>-->
-      <!--<p class="w3-text-grey">Whiskey and coffee 5.00</p><br>-->
-
-      <!--<h5>Iced tea</h5>-->
-      <!--<p class="w3-text-grey">Hot tea, except not hot 3.00</p><br>-->
-
-      <!--<h5>Soda</h5>-->
-      <!--<p class="w3-text-grey">Coke, Sprite, Fanta, etc. 2.50</p>-->
-    <!--</div>-->
-    <!--<img src="{{ url_for('static', filename = 'test.jpg') }}" style="width:100%;max-width:1000px;margin-top:32px;">-->
-
-  <!--</div>-->
-<!--</div>-->
-
-<!-- Contact/Area Container -->
 
 
 <div class="w3-container" id="demo" style="padding-bottom:32px;">
@@ -169,7 +114,6 @@ body, html {
 
     <h5 class="w3-center w3-padding-48"><span class="w3-tag w3-wide">DEMO/STEPS</span></h5>
     <p>Here is how it works</p>
-    <!--<div id="googleMap" class="w3-sepia" style="width:100%;height:400px;"></div>-->
 
 <video controls="controls" width="800" height="600"
        name="login_0416" src="{{ url_for('static', filename = 'login_0416.mov')}}" onplay="gtag('event', 'play', {'event_category': 'video', 'event_label': 'tutorial', 'value': 1})"></video>
@@ -177,81 +121,53 @@ body, html {
     <p><span class="w3-tag">Step 1</span> Upload up to 5 photos.</p>
     <p><span class="w3-tag">Step 2</span> Submit.</p>
     <p><span class="w3-tag">Step 3</span> Results.</p>
-
-      <p><strong>FREE PLAN: Enjoy 5 free evaluations a month. </strong></p>
-      <p><strong>PREMIUM PLAN: Enjoy unlimited evaluations for $9.99 a month. </strong></p>
-
-    <p><strong>Try it now</strong></p>
-
-
-    <!--<form action="/action_page.php" target="_blank">-->
-      <!--<p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Name" required name="Name"></p>-->
-      <!--<p><input class="w3-input w3-padding-16 w3-border" type="number" placeholder="How many people" required name="People"></p>-->
-      <!--<p><input class="w3-input w3-padding-16 w3-border" type="datetime-local" placeholder="Date and time" required name="date" value="2017-11-16T20:00"></p>-->
-      <!--<p><input class="w3-input w3-padding-16 w3-border" type="text" placeholder="Message \ Special requirements" required name="Message"></p>-->
-      <!--<p><button class="w3-button w3-black" type="submit">START UPLOAD</button></p>-->
-    <!--</form>-->
-
-
-      <div class="w3-col s3">
-      
-
-
-          {% if session['logged_in'] == True %}
-
-      <p><a href="/index" class="w3-button w3-block w3-black">START UPLOAD</a></p>
-
-      <p><a href="/upgrade" class="w3-button w3-block w3-black" onclick="gtag('event', 'upgrade', {'event_category' : 'click', 'event_label' : 'payment', 'value' : 1 });">UPGRADE NOW</a></p>
-
-          
-          {% else %}
-
-      <p><a href="/login" class="w3-button w3-block w3-black">START UPLOAD</a></p>
-
-      <p><a href="/login" class="w3-button w3-block w3-black">UPGRADE NOW</a></p>
-
-          {% endif %}
-      
-  
-      
-
+    <h5 class="w3-center w3-padding-48">
+        <span class="w3-tag w3-wide">OUR PLANS </span>
+    </h5>
+   
+    {% if session['logged_in'] == True %}  
+    <div style = "margin: auto">
+    <div class="w3-row-padding " style="margin:auto">
+        <div class="w3-half  w3-margin-bottom">
+          <div class="w3-container w3-round w3-white w3-padding-24", style = "margin-top: -5px">
+            <p><b>FREE PLAN </b></p>
+            <p>Enjoy up to 5 free evaluations a month.</p>
+            <a href="/index" class="w3-button w3-round w3-block w3-black w3-margin-bottom">START UPLOAD</a>
+          </div>
+        </div>
+        <div class="w3-half w3-margin-bottom">
+          <div class="w3-container w3-round w3-white w3-padding-24", style = "margin-top: -5px">
+            <p><b>PREMIUM PLAN</b></p>
+            <p>Enjoy unlimited evaluations for $5.99 a month.</p>
+            <a href="/upgrade" class="w3-button w3-round w3-block w3-black w3-margin-bottom" onclick="gtag('event', 'upgrade', {'event_category' : 'click', 'event_label' : 'payment', 'value' : 1 });">UPGRADE NOW</a>
+          </div>
+        </div>     
       </div>
+    </div>
+    {% else %}
+    <div style = "margin: auto">
+    <div class="w3-row-padding " style="margin:auto">
+        <div class="w3-half  w3-margin-bottom">
+          <div class="w3-container w3-round w3-white w3-padding-24", style = "margin-top: -5px">
+            <p><b>FREE PLAN </b></p>
+            <p>Enjoy up to 5 free evaluations a month.</p>
+            <a href="/login" class="w3-button w3-round w3-block w3-black w3-margin-bottom">START UPLOAD</a>
+          </div>
+        </div>
+        <div class="w3-half w3-margin-bottom">
+          <div class="w3-container w3-round w3-white w3-padding-24", style = "margin-top: -5px">
+            <p><b>PREMIUM PLAN</b></p>
+            <p>Enjoy unlimited evaluations for $5.99 a month.</p>
+            <a href="/login" class="w3-button w3-round w3-block w3-black w3-margin-bottom " onclick="gtag('event', 'upgrade', {'event_category' : 'click', 'event_label' : 'payment', 'value' : 1 });">UPGRADE NOW</a>
+          </div>
+        </div>     
+      </div>
+      </div>
+      
+     {% endif %}
 
   </div>
 </div>
-
-
-
-
-
-
-
-<!--&lt;!&ndash; About Container &ndash;&gt;-->
-<!--<div class="w3-container" id="contact">-->
-  <!--<div class="w3-content" style="max-width:700px">-->
-    <!--<h5 class="w3-center w3-padding-64"><span class="w3-tag w3-wide">CONTACT US</span></h5>-->
-    <!--<p>Team member</p>-->
-    <!--<p>Contact Info</p>-->
-
-    <!--&lt;!&ndash;<div class="w3-panel w3-leftbar w3-light-grey">&ndash;&gt;-->
-      <!--&lt;!&ndash;<p><i>"Add quote here" think slogan.</i></p>&ndash;&gt;-->
-      <!--&lt;!&ndash;<p>Author of the quote</p>&ndash;&gt;-->
-    <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-    <!--<img src="{{ url_for('static', filename = 'fuchouzhe.png') }}" style="width:100%;max-width:1000px" class="w3-margin-top">-->
-
-    <!--&lt;!&ndash;<p><strong>Opening hours:</strong> everyday from 6am to 5pm.</p>&ndash;&gt;-->
-    <!--&lt;!&ndash;<p><strong>Address:</strong> 15 Adr street, 5015, NY</p>&ndash;&gt;-->
-  <!--</div>-->
-<!--</div>-->
-
-
-<!-- Footer -->
-<!-- 
-<footer class="w3-center w3-light-grey w3-padding-48 w3-large">
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-</footer>
- -->
 
 
 </body>
