--- a/templates/dashboard_results.html
+++ b/templates/dashboard_results.html
@@ -21,8 +21,9 @@
   <meta property="og:type"          content="website" />
   <meta property="og:title"         content="PICTURESQUE.AI" />
   <meta property="og:description"   content="Your description" />
-  <!--<meta property="og:image" content="http://54.218.179.9:8080/static/test.jpg">-->
-  <meta property="og:image" content="{{url_for('uploaded_file', filename='053_flickr.jpeg')}}">
+  <meta property="og:image" content="http://54.218.179.9:8080/static/test.jpg">
+  <!--<meta property="og:image" content="http://54.218.179.9:8080/upload/053_flickr.jpeg">-->
+  <!--meta property="og:image" content="{{url_for('uploaded_file', filename='053_flickr.jpeg')}}"-->
 <!-- End Open Graph tags-->
 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
